# popeye

./: Cargo.toml  LICENSE  README.md
docs/: idea.txt
src/: _item.rs  command.rs  context.rs  db.rs  display.rs  entry.rs  item.rs  main.rs  prelude.rs  tags
src/commands/: create.rs  details.rs  init.rs  ls.rs  mod.rs  reindex.rs  resetdb.rs  set.rs  version.rs
