[package]
edition = "2021"
name = "yo"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = {version = "0.4", features = ["serde"]}
serde = {version = "1.0", features = ["derive"]}
uuid = {version = "*", features = ["v4"]}
