[package]
edition = "2021"
name = "yo"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
chrono = {version = "0.4", features = ["serde"]}
serde = {version = "1.0.144", features = ["derive"]}
uuid = {version = "1.1.2", features = ["v4", "serde"]}
